# universe_battle_discord

./: .gitignore  .pdm.toml  Dockerfile  README.md  map.json  pyproject.toml
.github/workflows/: docker-publish.yml
db/: game.db  game.db-shm  game.db-wal
src/: main.py
src/game/: buff.py  config.py  exception.py  item.py  message.py  player.py
src/game/board/: __init__.py  board.py  factory.py  loader.py
src/game/bot/: __init__.py  bot.py  command.py  task.py
src/game/db/: __init__.py  db.py
src/game/skill/: __init__.py  factory.py  skill.py
src/utils/: camps.py  checks.py
