[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
    "flake8>=6.0.0",
    "ipython>=8.7.0",
    "pylint>=2.15.8",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "OmegaPhi", email = "ywyt738@gmail.com"},
]
dependencies = [
    "loguru>=0.6.0",
    "peewee>=3.15.4",
    "environs>=9.5.0",
    "py-cord>=2.3.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}
